using System.ComponentModel.DataAnnotations;

namespace Entities.DTOs;

public record BookDtoForInsertion : BookDtoBase
{

}
